# teste

./: 404.html  index.html  objects.inv  pyproject.toml  requirements.txt  tox.ini
.github/: SKILL.md  gatekeeper.agent.md  kanban-master.agent.md  mcp_databricks_connect_server.py  planner.agent.md  preparacao_pipeline.md  simulacao_5_batches (1).py  test-writer.agent.md  teste-writter.agent.md  vscode_settings.json
.github/aaaa/: SKILL.md  xd
.github/aaaa/agents/: requisitos.agent.md  tarefas.agent.md
.github/aaaa/agents/dev/: databricks-bi.agent.md  databricks-spark.agent.md  documentation.agent.md
.github/aaaa/base_conhecimento/: ambiente.md
.github/aaaa/skills/dashboard-databricks/: SKILL.md
.github/aaaa/skills/mkdocs-documentation/: SKILL.md
.github/aaaa/templates/: plano.md  tarefa.md
.github/ai_tracking/: README.md  __init__.py  exemplo_uso.py
.github/ai_tracking/controller/: __init__.py  batch_controller.py
.github/ai_tracking/models/: __init__.py  batch_data.py  metricas_lote.py  prompt_data.py  registro_data.py
.github/ai_tracking/repository/: __init__.py  prompt_repository.py
.github/ai_tracking/service/: __init__.py  ai_tracking_service.py
.github/ai_tracking/tracker/: __init__.py  mlflow_tracker.py  trace_logger.py
.github/uff/: 01_context.md  02_components.md  03_flow.md  04_control_table.md  05_design_decisions.md  06_c4_gerador_jsonl.md  07_c4_empacotador_jsonl.md  08_c4_validador_recuperacao.md  09_c4_tabela_controle.md  README.md
.github/uff/agents/: analisador.agent.md  orquestrador_tabela.agent.md  padronizador.agent.md
.github/uff/mcp_server/: gerenciador_chromadb.py  server.py  setup_chromadb.py
.github/uff/mcp_server/arquivos/: mnemonicos.csv  naturezas.csv
.github/workflows/: deploy_docs  deploy_docs.yml
app/src/: main.py
config/: mkdocs.yml
docs/: index.md
tests/: test_main.py
